--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "live-server": "^1.2.2",
+    "liveserver": "^0.1.20",
     "sass": "^1.62.1"
   },
   "name": "ladingpageflash",
